--- a/gtfs/templates/create/stop.html
+++ b/gtfs/templates/create/stop.html
@@ -71,7 +71,7 @@
         <label for="stop_zone">Zona de la parada</label>
         <select name="stop_zone">
             {% for zone in zones %}
-                <option value="{{zone.zone_id}}">{{zone.zone_id}}</option>
+                <option value="{{zone.id}}">{{zone.zone_id}}</option>
             {% endfor %}
         </select>
     </div>
