--- a/gtfs/templates/company_screens/agency.html
+++ b/gtfs/templates/company_screens/agency.html
@@ -90,12 +90,12 @@
                 <tbody>
                     {% for agency in agencies %}
                         <tr>
-                            <td>{{agency.agency_id}}</td>
+                            <td>{{agency.id}}</td>
                             <td>{{agency.name}}</td>
                             <td>{{agency.url}}</td>
                             <td>{{agency.timezone}}</td>
                             <td>
-                                <a href="{% url 'delete_agency' agency.id company.company_id %}" class="btn btn-danger">Eliminar</a>
+                                <a href="{% url 'view_agency_routes' agency.id %}" class="btn btn-danger">Eliminar</a>
                                 <a href="{% url 'edit_agency' agency.id company.company_id %}" class="btn btn-primary">Editar</a>
                             </td>
                         </tr>
