--- a/gtfs/templates/create/company.html
+++ b/gtfs/templates/create/company.html
@@ -12,7 +12,7 @@
   <p>Llenar la información a continuación.</p>
 
   <!-- Formulario de creación de la compañía -->
-  <form method="POST">
+  <form method="POST" enctype="multipart/form-data">
     {% csrf_token %}
 
     <!-- Campo para el nombre de la compañía -->
@@ -51,10 +51,18 @@
         <input type="file" class="form-control" name="company_logo" id="company_logo">
     </div>
 
+    <!-- Campo para el archivo .zip del feed -->
+    <div class="mb-3">
+        <label for="gtfs_file" class="form-label">Archivo .zip para el Feed</label>
+        <input type="file" class="form-control" name="gtfs_file" id="gtfs_file" required>
+    </div>
+
     <!-- Botón de envío del formulario -->
     <div class="mb-3">
         <button type="submit" class="btn btn-primary">Enviar</button>
     </div>    
   </form>
+
+
 
 {% endblock %}
