--- a/gtfs/templates/edit/edit_calendar_dates.html
+++ b/gtfs/templates/edit/edit_calendar_dates.html
@@ -1,29 +1,20 @@
 {% extends 'base.html' %}
-
 {% load static %}
 
 {% block main %}
-
 <h1>Edición</h1>
-
 <p>Datos GTFS editables por usuarios con los permisos.</p>
-
 <h2>Rutas de transportes</h2>
-
 <p>Editar la información a continuación.</p>
 
 <!-- Formulario de edición de Rutas de Transportes -->
 <form method="POST">
-
     {% csrf_token %}
-
     <!-- Campo para editar la fecha -->
     <div class="mb-3">
         <label for="date">Fecha:</label>
-        <input type="date" name="date" value="{% if calendar_date.date %}{{ calendar_date.date }}{% endif %}" required>
+        <input type="date" name="date" value="{{ calendar_date.date }}" required>
     </div>
-
-
     <!-- Campo para elegir el tipo de excepción (disponible o no disponible) -->
     <div class="mb-3">
         <label for="exception_type">Elija si el servicio va a estar disponible o no:</label>
@@ -32,19 +23,14 @@
             <option value="2" {% if calendar_date.exception_type == "2" %}selected{% endif %}>Remover servicio para la fecha especificada</option>
         </select>
     </div>
-
     <!-- Campo para editar el nombre de la fecha o feriado -->
     <div class="mb-3">
         <label for="holiday_name">Nombre de la fecha o feriado:</label>
-        <input type="text" name="holiday_name" value="{{calendar_date.holiday_name}}" required>
+        <input type="text" name="holiday_name" value="{{ calendar_date.holiday_name }}" required>
     </div>
-
     <!-- Botón de envío del formulario -->
     <div class="mb-3">
         <button type="submit" class="btn btn-primary">Enviar</button>
     </div>
-    
 </form>
-
-
 {% endblock %}
