--- a/gtfs/templates/edit/edit_stop.html
+++ b/gtfs/templates/edit/edit_stop.html
@@ -72,47 +72,46 @@
         <select name="stop_zone">
             <option value="" {% if not stop.zone_id %}selected{% endif %}>Ninguna</option>
             {% for zone in zones %}
-                <option value="{{ zone.zone_id }}" {% if stop.zone_id and zone.zone_id == stop.zone_id %}selected{% endif %}>{{ zone.zone_id }}</option>
+                <option value="{{ zone.id }}" {% if stop.zone_id == zone.id %}selected{% endif %}>{{ zone.zone_id }}</option>
             {% endfor %}
         </select>
     </div>
 
+    <!-- Campo para la dirección web de la parada -->
+    <div class="mb-3">
+        <label for="stop_url" class="form-label">Dirección web de la parada</label>
+        <input type="text" class="form-control" name="stop_url" id="stop_url" pattern="https?://.+" value="{{stop.url}}" required>
+    </div>
 
-      <!-- Campo para la dirección web de la parada -->
-      <div class="mb-3">
-          <label for="stop_url" class="form-label">Dirección web de la parada</label>
-          <input type="text" class="form-control" name="stop_url" id="stop_url" pattern="https?://.+" value="{{stop.url}}" required>
-      </div>
+    <!-- Campo para el tipo de parada -->
+    <div class="mb-3">
+        <label for="stop_location_type">Selecciona el tipo de parada:</label>
+        <select id="stop_location_type" name="stop_location_type">
+            <option value="0" {% if stop.location_type == "0"%}selected{%endif%}>Parada</option>
+            <option value="1" {% if stop.location_type == "1"%}selected{%endif%}>Estación</option>
+        </select>
+    </div>
 
-      <!-- Campo para el tipo de parada -->
-      <div class="mb-3">
-          <label for="stop_location_type">Selecciona el tipo de parada:</label>
-          <select id="stop_location_type" name="stop_location_type">
-              <option value="0" {% if stop.location_type == "0"%}selected{%endif%}>Parada</option>
-              <option value="1" {% if stop.location_type == "1"%}selected{%endif%}>Estación</option>
-          </select>
-      </div>
+    <!-- Campo para la estación asociada -->
+    <div class="mb-3">
+        <label for="stop_parent_station" class="form-label">La estación asociada a la parada:</label>
+        <input type="text" class="form-control" name="stop_parent_station" id="stop_parent_station" value="{{stop.parent_station}}" required>
+    </div>
 
-      <!-- Campo para la estación asociada -->
-      <div class="mb-3">
-          <label for="stop_parent_station" class="form-label">La estación asociada a la parada:</label>
-          <input type="text" class="form-control" name="stop_parent_station" id="stop_parent_station" value="{{stop.parent_station}}" required>
-      </div>
+    <!-- Campo para la accesibilidad en silla de ruedas -->
+    <div class="mb-3">
+        <label for="stop_wheelchair_boarding">¿Es posible subir al transporte en silla de ruedas?</label>
+        <select id="stop_wheelchair_boarding" name="stop_wheelchair_boarding">
+            <option value="0" {% if stop.wheelchair_boarding == "0"%}selected{%endif%}>No hay información.</option>
+            <option value="1" {% if stop.wheelchair_boarding == "1"%}selected{%endif%}>Abordaje parcial de silla de ruedas.</option>
+            <option value="2" {% if stop.wheelchair_boarding == "2"%}selected{%endif%}>Las sillas de ruedas no pueden subir.</option>
+        </select>
+    </div>
 
-      <!-- Campo para la accesibilidad en silla de ruedas -->
-      <div class="mb-3">
-          <label for="stop_wheelchair_boarding">¿Es posible subir al transporte en silla de ruedas?</label>
-          <select id="stop_wheelchair_boarding" name="stop_wheelchair_boarding">
-              <option value="0" {% if stop.wheelchair_boarding == "0"%}selected{%endif%}>No hay información.</option>
-              <option value="1" {% if stop.wheelchair_boarding == "1"%}selected{%endif%}>Abordaje parcial de silla de ruedas.</option>
-              <option value="2" {% if stop.wheelchair_boarding == "2"%}selected{%endif%}>Las sillas de ruedas no pueden subir.</option>
-          </select>
-      </div>
-
-      <!-- Botón de envío del formulario -->
-      <div class="mb-3">
-          <button type="submit" class="btn btn-primary">Enviar</button>
-      </div>
+    <!-- Botón de envío del formulario -->
+    <div class="mb-3">
+        <button type="submit" class="btn btn-primary">Enviar</button>
+    </div>
   </form>
 
 {% endblock %}
